--- a/template/R/main.Rmd
+++ b/template/R/main.Rmd
@@ -12,24 +12,24 @@ params:
       +datum=OSGB36 +units=m +no_defs
   field_x:
     input: text
-    label: "x coordinate field:"
-    value: "POINT_X"
+    label: 'x coordinate field:'
+    value: POINT_X
   field_y:
     input: text
-    label: "y coordinate field:"
-    value: "POINT_Y"
+    label: 'y coordinate field:'
+    value: POINT_Y
   field_depth:
     input: text
-    label: "peat depth field:"
-    value: "PEAT_DEPTH"
+    label: 'peat depth field:'
+    value: PEAT_DEPTH
   field_cat1:
     input: text
-    label: "peat type field:"
-    value: "NA"
+    label: 'peat type field:'
+    value: NA
   field_cat2:
     input: text
-    label: "measurement type field:"
-    value: "NA"
+    label: 'measurement type field:'
+    value: NA
   subs_dist:
     label: 'Subset by distance:'
     value: no
@@ -42,30 +42,13 @@ params:
     label: 'If subset: distance band width (metres)'
     value: 10
 output:
-    html_notebook:
-    html_document:
-    df_print: paged
+  github_document: default
+  html_notebook: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-
-## Workflow
-
-This is the main script forming part of a workflow to model peat depth for a given area.  The entire workflow relies on a number of addtional scripts and is described here.  
-
-1. Import and prepare data using `import_prepare_data.Rmd`
-2. Explore and select data using `explore_and_select_data.Rmd`
-3. Create a model using `model.Rmd`
-4. Evaluate the model using `evaluate.Rmd`
-5. Report and visualise model metrics using `visualise_model_results_template.Rmd`
-6. Produce prediction and variance rasters for export using `predict.Rmd`
-7. Review and refine, going back to step 1 or 2 as often as necessary.
-
-In addition to those scripts there are helper scripts with useful functions: 
-
-* `rsquared_funs.R` defines functions for calculating the metrics *r-squared* and *adjusted r-squared*.  
 
 ## Setup
 
@@ -80,6 +63,34 @@ At the moment a bit of manual preparation is required:
     + `R`  
     
 4.    Into folder `R` copy the above scripts.  
+
+## Workflow
+
+This is the main script forming part of a workflow to model peat depth for a given area.  The entire workflow relies on a sequence of *parameterised RMarkdown* scripts described here.  
+
+### Scripts
+
+These scripts are designed to be executed in order.  However, it is expected that it is a process of review and refinement, going back to step 1 or 2 as often as necessary.
+
+1. Import and prepare data using [import_prepare_data.Rmd](import_prepare_data.Rmd)
+2. Explore and select data using [explore_and_select_data.Rmd](explore_and_select_data.Rmd)
+3. Create a model using [model.Rmd](model.Rmd)
+4. Evaluate the model using [evaluate.Rmd](evaluate.Rmd)
+5. Report and visualise model metrics using [visualise_model_results_template.Rmd](visualise_model_results_template.Rmd)
+6. Produce prediction and variance rasters for export using [predict.Rmd](predict.Rmd)
+
+In addition there are helper scripts with useful functions: 
+
+* `rsquared_funs.R` defines functions for calculating the metrics *r-squared* and *adjusted r-squared*.  
+
+### Parameters
+
+At the end of each script any outputs are saved to file and an R object `parameters` is saved.  `parameters` can then be read by subsequent scripts to continue the workflow.  This means you can close an R session between scripts without losing work done in the previous script.  Some of these parameters are used in keeping track of the workflow: 
+
+*  `area_abbr`: A user defined abbreviation for the area to be modelled (e.g. "dart" for Dartmoor)
+
+
+
 
 
 ## About parmaterised RMarkdown scripts
@@ -110,43 +121,5 @@ Once you are happy with the paramters and the code, you can produce an output do
 ### Running the whole code in one go
 
 To do this, select the toggle next to the `Knit` command and select `Knit with Parameters...`.  A dialogue will appear and ask you to enter the parameters for the model run.  
-
-
-```{r}
-#install.packages(c("geoR", "tidyverse", "sf", "sp", "gstat", "raster"))
-library(geoR)
-library(tidyverse)
-library(sf)
-library(sp)
-library(gstat)
-library(raster)
-```
-
-
-```{r}
-## Set variables
-# user defined variables
-
-  #set full path to observation data
-obs_path <- params$obs_path
-   #coordinate reference system
-proj4 <- params$projection
-  #choose whether to subset by distance band
-subs_dist <- params$subs_dist
-  # distance band width (metres)
-band_w <-  params$band_w
-  # max number of samples per band  
-band_n <- params$band_n 
-  
-
-
-# automatically defined session variables 
-
-  #set current time and date to append to run log 
-rundate <- paste0("run_", format(Sys.time(), format = "%Y%m%d-%H%M"))
-
-par.ori <- par() #save default plotting parameters
-
-```
 
 
